--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "node-todo",
   "version": "0.0.0",
-  "description": "Simple todo application.",
+  "description": "Nba stat leaders",
   "main": "server.js",
-  "author": "Scotch",
+  "author": "Ansel",
   "dependencies": {
     "body-parser": "~1.5.2",
     "express": "~4.7.2",
